<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dofbot_arm_lib</name>
  <version>0.0.1</version>
  <description>YB-SD15M serial bus-servo driver for the DOFBOT arm, installed as the vendor-compatible Arm_Lib Python module.</description>
  <maintainer email="jim@dinunzio.com">jim</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
