<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dofbot_ctrl</name>
  <version>0.0.1</version>
  <description>DOFBOT arm control nodes: servo/URDF angle mapping and a read-only joint-state mirror.</description>
  <maintainer email="jim@dinunzio.com">jim</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>dofbot_arm_lib</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf_launch</exec_depend>
  <exec_depend>dofbot_description</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
